--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_REST_API_ENDPOINT=https://api.bdblackhouse.com
 
 # Shop site url to fetch banners and menus
-NEXT_PUBLIC_SITE_URL=https://bdblackhouse.com
+NEXT_PUBLIC_SITE_URL=http://localhost:3003
 
 NEXT_PUBLIC_DEFAULT_LANGUAGE=en
 
@@ -13,7 +13,7 @@ NEXT_PUBLIC_AVAILABLE_LANGUAGES=en
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # Social Authentication
-NEXTAUTH_URL=https://bdblackhouse.com
+NEXTAUTH_URL=http://localhost:3003
 SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
 GOOGLE_CLIENT_ID=
