--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3003",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start -p 3003",
     "clean": "rimraf -g \"{node_modules,.next,.cache}\""
   },
   "dependencies": {
