--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # REST API endpoint
-NEXT_PUBLIC_REST_API_ENDPOINT=https://api.bdblackhouse.com
+NEXT_PUBLIC_REST_API_ENDPOINT=https://ecommerce.globalazmain.com
 
 # Shop site url to fetch banners and menus
 NEXT_PUBLIC_SITE_URL=http://localhost:3003
